--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,59 +1,10 @@
 /*global*/
 *{
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: serif;
 }
 p{
-    font-size: large;
+    font-size: 20px;
 }
-
-
-
-
-
-/*header*/
-.site-header{
-    text-align: center;
-    background-size: cover;
-    background-image: url(/img/istockphoto-1330020195-612x612.jpg);
-    height: 400px;
-    
-}
-
-/*menu*/
-.nav-bar{
-    word-spacing: 1.5rem;
-}
-.nav-bar a{
-    color: black; 
-}
-.flex-container{
-    display: flex;
-    justify-content: space-around;
-}
-.about-container{
-    padding: 4rem;
-    margin-left: 4rem;
-}
-.img-container{
-    margin-right: 4rem;
-    padding: 4rem;
-}
-
-/*utilities*/
-.btn{
-    display: block;
-    text-decoration: none;
-    margin-top: 20px;
-    margin-bottom: 20px;
-    padding: 10px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 12px;
-    letter-spacing: 2px;    
-}
-.btn-read{
-    background-color: black;
-    color: white;
-    width: 100px;
+img{
+    size: 50%;
 }
